# shop-test-vless

./: .gitignore  AUTO_START.md  Dockerfile  OPTIMIZATION.md  README.md  docker-compose.yml  install.sh  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_template.md  feature_template.md
src/shop_bot/: __main__.py  bot_controller.py  config.py  support_bot_controller.py
src/shop_bot/bot/: admin_handlers.py  handlers.py  keyboards.py  middlewares.py
src/shop_bot/data_manager/: backup_manager.py  database.py  resource_monitor.py  scheduler.py  speedtest_runner.py
src/shop_bot/modules/: __init__.py  xui_api.py
src/shop_bot/support_bot/: handlers.py
src/shop_bot/webhook_server/: app.py
src/shop_bot/webhook_server/static/css/: style.css
src/shop_bot/webhook_server/static/js/: script.js
src/shop_bot/webhook_server/templates/: admin_keys.html  base.html  button_constructor.html  dashboard.html  debug_settings.html  login.html  monitor.html  settings.html  support.html  support_bot_settings.html  ticket.html  users.html
src/shop_bot/webhook_server/templates/partials/: admin_keys_table.html  dashboard_stats.html  dashboard_transactions.html  support_table.html  user_keys_table.html  users_pagination.html  users_table.html
tests/: README.md  RUN_TESTS.md  conftest.py  test_handlers_ssl.py  test_speedtest_runner.py
